# nuwa-selfhosted

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: nuwa_selfhosted_query.py
src/nuwa_selfhosted/: __init__.py  cli.py  query.py
tests/: test_cli.py  test_query.py
