[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuwa-selfhosted"
version = "1.1.1"
description = "Query awesome-selfhosted-data and get practical, decision-ready shortlists of self-hosted software."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "ReyMao" }]
keywords = [
    "self-hosted",
    "awesome-selfhosted",
    "docker",
    "devops",
    "hermes-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "build>=1.0",
]

[project.scripts]
nuwa-selfhosted = "nuwa_selfhosted.cli:main"

[project.urls]
Homepage = "https://github.com/reymondmeking-dot/nuwa-selfhosted"
Repository = "https://github.com/reymondmeking-dot/nuwa-selfhosted"
Issues = "https://github.com/reymondmeking-dot/nuwa-selfhosted/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
